--- a/doc/enums.adoc
+++ b/doc/enums.adoc
@@ -1,5 +1,5 @@
 
-== Enums and structs
+== Enums
 
 [[enums_window_hint]]
 * [small]#*Window creation hints* +
@@ -42,6 +42,7 @@ The following list shows the admitted _hint_ values for each _target_ (_target_:
 Values: '_unknown_', '_space_', '_apostrophe_', '_comma_', '_minus_', '_period_', '_slash_', '_0_' .. '_9_', '_semicolon_', '_equal_', '_a_' .. '_z_', '_left bracket_', '_backslash_', '_right bracket_', '_grave accent_', '_world 1_', '_world 2_', '_escape_', '_enter_', '_tab_', '_backspace_', '_insert_', '_delete_', '_right_', '_left_', '_down_', '_up_', '_page up_', '_page down_', '_home_', '_end_', '_caps lock_', '_scroll lock_', '_num lock_', '_print screen_', '_pause_', '_f1_' .. '_f25_', '_kp 0_' .. '_kp 9_', '_kp decimal_', '_kp divide_', '_kp multiply_', '_kp subtract_', '_kp add_', '_kp enter_', '_kp equal_', '_left shift_', '_left control_', '_left alt_', '_left super_', '_right shift_', '_right control_', '_right alt_', '_right super_', '_menu_'. +
 (Rfr: http://www.glfw.org/docs/latest/group__keys.html[keyboard keys])#
 
+////
 [[enums_gamepad_axis]]
 * [small]#*gamepad axis*: '_xxx_' for GLFW_GAMEPAD_AXIS_XXX (e.g. '_left x_' for GLFW_GAMEPAD_AXIS_LEFT_X). +
 Values: '_left x_', '_left y_', '_right x_', '_right y_', '_left trigger_', '_right trigger_'. +
@@ -52,6 +53,40 @@ Values: '_left x_', '_left y_', '_right x_', '_right y_', '_left trigger_', '_ri
 * [small]#*gamepad button*: '_xxx_' for GLFW_GAMEPAD_BUTTON_XXX (e.g. '_a_' for GLFW_GAMEPAD_BUTTON_A). +
 Values: '_a_' _(cross)_, '_b_' _(circle)_, '_x_' _(square)_, '_y_' _(triangle)_, '_left bumper_', '_right bumper_', '_back_', '_start_', '_guide_', '_left thumb_', '_right thumb_', '_dpad up_', '_dpad right_', '_dpad down_', '_dpad left_'. +
 (Rfr: link:++http://www.glfw.org/docs/latest/group__gamepad__buttons.html++[gamepad buttons])#
+////
+
+== Structs
+
+[[gamepadaxes]]
+* [small]#*gamepadaxes* = { +
+_left_x_: float (-1.0..1.0), +
+_left_y_: float (-1.0..1.0), +
+_right_x_: float (-1.0..1.0), +
+_right_y_: float (-1.0..1.0), +
+_left_trigger_: float (-1.0..1.0), +
+_right_trigger_: float (-1.0..1.0), +
+} (rfr: link:++https://www.glfw.org/docs/latest/structGLFWgamepadstate.html++[GLFWgamepadstate],
+link:++http://www.glfw.org/docs/latest/group__gamepad__axes.html++[gamepad axes]).#
+
+[[gamepadbuttons]]
+* [small]#*gamepadbuttons* = { +
+_a_: '_press_' | '_release_', +
+_b_: '_press_' | '_release_', +
+_x_: '_press_' | '_release_', +
+_y_: '_press_' | '_release_', +
+_left_bumper_: '_press_' | '_release_', +
+_right_bumper_: '_press_' | '_release_', +
+_back_: '_press_' | '_release_', +
+_start_: '_press_' | '_release_', +
+_guide_: '_press_' | '_release_', +
+_left_thumb_: '_press_' | '_release_', +
+_right_thumb_: '_press_' | '_release_', +
+_dpad_up_: '_press_' | '_release_', +
+_dpad_right_: '_press_' | '_release_', +
+_dpad_down_: '_press_' | '_release_', +
+_dpad_left_: '_press_' | '_release_', +
+} (rfr: link:++https://www.glfw.org/docs/latest/structGLFWgamepadstate.html++[GLFWgamepadstate buttons],
+link:++http://www.glfw.org/docs/latest/group__gamepad__buttons.html++[gamepad buttons]).#
 
 [[videomode]]
 * [small]#*videomode* = { +
@@ -62,3 +97,4 @@ _blue_bits_: integer, +
 _green_bits_: integer, +
 _refresh_rate_: integer, +
 } (rfr: link:http://www.glfw.org/docs/latest/group__monitor.html[Monitor handling]).#
+
