Added new enum values for inputmode

--- a/doc/input.adoc
+++ b/doc/input.adoc
@@ -6,10 +6,10 @@
 [[set_input_mode]]
 * *set_input_mode*(_window_, _mode_, _value_) +
 _value_ = *get_input_mode*(_window_, _mode_) +
-[small]#_mode_: '_cursor_' | '_sticky keys_' | '_sticky mouse buttons_'. +
+[small]#_mode_: '_cursor_' | '_sticky keys_' | '_sticky mouse buttons_' | '_lock key mods_' | '_raw mouse motion_'. +
 _value_: one of the following, depending on _mode_: +
-pass:[-] if _mode_ is '_sticky keys_' or '_sticky mouse buttons_': _value_ = boolean. +
-pass:[-] if _mode_ is '_cursor_': _value_ = '_normal_' | '_hidden_' | '_disabled_'.#
+pass:[-] if _mode_ is '_cursor_': _value_ = '_normal_' | '_hidden_' | '_disabled_'. +
+pass:[-] otherwise: _value_ = boolean.#
 
 ==== Keyboard
 
