--- a/doc/enums.adoc
+++ b/doc/enums.adoc
@@ -11,6 +11,12 @@ The following list shows the admitted _hint_ values for each _target_ (_target_:
 '_focused_': boolean +
 '_auto iconify_': boolean +
 '_floating_': boolean +
+'_maximized_': boolean +
+'_center cursor_': boolean +
+'_transparent framebuffer_': boolean +
+'_hovered_': boolean +
+'_focus on show_': boolean +
+'_scale to monitor_': boolean +
 '_red bits_': integer | '_don't care_' +
 '_green bits_': integer | '_don't care_' +
 '_blue bits_': integer | '_don't care_' +
