--- a/doc/initialization.adoc
+++ b/doc/initialization.adoc
@@ -19,7 +19,7 @@ and thus not exposed to the script code.
 
 [[set_error_callback]]
 * *set_error_callback*([_func_]) +
-[small]#The _func_ callback is executed as *_func(ec, descr)_* where _ec_ (a number) is the 
+[small]#The _func_ callback is executed as *_func(ec, descr)_* where _ec_ (an integer) is the
 error code and _descr_ (a string) is the description of the occurred error. +
 If _func_ is _nil_, unregisters the current error callback (if any).#
 
